[FIX] - buttons alignment within the Big Title Section. On some resolutions the right button was a little bit above than the left one. Both of them have now identical margins, so there is a space between them when they are on the same row and one above each other.
#22

--- a/assets/sass/3_sections/_big-title.scss
+++ b/assets/sass/3_sections/_big-title.scss
@@ -52,8 +52,9 @@
         opacity: 0.75;
       }
 
-      .btn-primary + .btn-right {
-        margin-left: 30px;
+      .btn,
+      .btn-right {
+        margin: 15px;
       }
     }
 
